@@ -3,6 +3,12 @@
 version := 1.5.1a
 
 
+# ownership (used by 'make install')
+
+user      := root
+group     := sword
+
+
 # this WILL NOT WORK for you. only inhouse patched version of
 # sapphire will omit enciphering code when set
 
@@ -48,20 +54,16 @@ system := intel
 
 zlib := yes
 
-# ownership (used by 'make install')
-
-user      := root
-group     := sword
-
 
 # paths
 
-instdir   := /usr/local/sword/
+instdir   := /usr
 
 bindir    := ${instdir}/bin
 libdir    := ${instdir}/lib
 hdir      := ${instdir}/include/sword
 docdir    := ${instdir}/doc/sword
+confdir   := ${instdir}/share/sword
 
 
 
@@ -224,6 +226,26 @@ just-clean: subdir-clean
 
 clean:
 	${MAKE} just-clean nodeps=yes
+
+# install_config target
+
+install_config: 
+
+	@echo ""
+	@echo ""
+	@echo "****"
+	@echo "****"
+	@echo "Be sure directory, user, group, etc. preferences are correct in Makefile.cfg"
+	@echo "****"
+	@echo "****"
+	@echo ""
+ifneq (${confdir},)
+	@if [ ! -d ${confdir}/mods.d ]; then install -o ${user} -g ${group} -m a+rx,u+rxw -d ${confdir}/mods.d/ ; fi
+	@if [ ! -d ${confdir}/locales.d ]; then install -o ${user} -g ${group} -m a+rx,u+rxw -d ${confdir}/locales.d/ ; fi
+	install -o ${user} -g ${group} -m a+r,u+rw samples/recommended/sword.conf /etc/
+	install -o ${user} -g ${group} -m a+r,u+rw ${modsconf} ${confdir}/mods.d/
+	install -o ${user} -g ${group} -m a+r,u+rw ${localesconf} ${confdir}/locales.d/
+endif
 
 # install target
 
